add some modules,add some gui,fix some bug.