@@ -10,7 +10,6 @@ import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.gui.widget.TextFieldWidget;
 import net.minecraft.client.session.Session;
 import net.minecraft.text.Text;
-import net.minecraft.util.Util;
 
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
@@ -18,7 +17,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.charset.StandardCharsets;
-import java.awt.Color;
 import java.util.Optional;
 import java.util.List;
 import java.util.ArrayList;
@@ -29,15 +27,15 @@ public class AltManagerGui extends Screen {
     private int scrollOffset = 0;
     private final Gson gson = new Gson();
     private final Path altFile = Paths.get(System.getProperty("user.home"), ".advicenext", "alt.json");
-    
+
     private String status = "";
     private boolean isLoading = false;
-    
+
     // 双击登录相关变量
     private int lastClickedAccount = -1;
     private long lastClickTime = 0;
-    private static final long DOUBLE_CLICK_TIME = 500; // 双击时间间隔（毫秒）
-    
+    private static final long DOUBLE_CLICK_TIME = 500;
+
     // Rise style colors
     private final int backgroundColor = 0xFF1E1E1E;
     private final int panelColor = 0xFF2D2D30;
@@ -58,147 +56,122 @@ public class AltManagerGui extends Screen {
 
     @Override
     public void render(DrawContext context, int mouseX, int mouseY, float delta) {
-        // Background
-        this.renderBackground(context, mouseX, mouseY, delta);
-        
-        // Header - no background fill
         context.drawCenteredTextWithShadow(textRenderer, "Alt Manager", width / 2, 15, Colors.currentColor().getRGB());
-        
-        // Main panel - no background fill
+
         int panelX = 20;
         int panelY = 50;
         int panelWidth = width - 40;
         int panelHeight = height - 120;
-        
-        // Account list
+
         renderAccountList(context, panelX + 10, panelY + 10, panelWidth - 20, panelHeight - 20, mouseX, mouseY);
-        
-        // Bottom buttons
         renderBottomButtons(context, mouseX, mouseY);
-        
-        // Status
+
         if (!status.isEmpty()) {
-            context.drawCenteredTextWithShadow(textRenderer, status, width / 2, height - 15, 
-                status.contains("Success") ? 0x00FF00 : 0xFF0000);
+            context.drawCenteredTextWithShadow(textRenderer, status, width / 2, height - 15,
+                    status.contains("Success") ? 0x00FF00 : 0xFF0000);
         }
-        
-        // 添加双击提示
+
         context.drawTextWithShadow(textRenderer, "Double-click to login", 30, height - 15, subTextColor);
-        
+
         super.render(context, mouseX, mouseY, delta);
     }
-    
+
     private void renderAccountList(DrawContext context, int x, int y, int width, int height, int mouseX, int mouseY) {
-        // Header
         context.drawTextWithShadow(textRenderer, "Accounts (" + accountList.size() + ")", x, y, textColor);
-        
-        // List area
+
         int listY = y + 20;
         int listHeight = height - 20;
         int itemHeight = 30;
         int visibleItems = listHeight / itemHeight;
-        
-        // Scroll handling
+
         int maxScroll = Math.max(0, accountList.size() - visibleItems);
         scrollOffset = Math.max(0, Math.min(scrollOffset, maxScroll));
-        
-        // Render accounts
+
         for (int i = 0; i < Math.min(visibleItems, accountList.size()); i++) {
             int index = i + scrollOffset;
             if (index >= accountList.size()) break;
-            
+
             String account = accountList.get(index);
             int itemY = listY + i * itemHeight;
-            
+
             boolean isSelected = index == selectedAccount;
             boolean isHovered = mouseX >= x && mouseX <= x + width && mouseY >= itemY && mouseY <= itemY + itemHeight;
-            
-            // Background
+
             if (isSelected) {
                 context.fill(x, itemY, x + width, itemY + itemHeight, selectedColor);
             } else if (isHovered) {
                 context.fill(x, itemY, x + width, itemY + itemHeight, hoverColor);
             }
-            
-            // Account info
+
             String displayName = account.length() > 40 ? account.substring(0, 37) + "..." : account;
             context.drawTextWithShadow(textRenderer, displayName, x + 10, itemY + 8, textColor);
-            
+
             String type = account.contains("@") ? "Microsoft" : "Offline";
             context.drawTextWithShadow(textRenderer, type, x + width - 80, itemY + 8, subTextColor);
-            
-            // Status indicator
+
             int statusColor = account.contains("@") ? 0x00AA00 : 0xFFAA00;
             context.fill(x + 5, itemY + 10, x + 8, itemY + 20, statusColor);
         }
     }
-    
+
     private void renderBottomButtons(DrawContext context, int mouseX, int mouseY) {
         int buttonY = height - 60;
         int buttonWidth = 100;
         int buttonHeight = 25;
         int spacing = 110;
         int startX = (width - (spacing * 4 - 10)) / 2;
-        
+
         renderButton(context, "Microsoft", startX, buttonY, buttonWidth, buttonHeight, mouseX, mouseY, selectedColor);
         renderButton(context, "Offline", startX + spacing, buttonY, buttonWidth, buttonHeight, mouseX, mouseY, 0xFF666666);
         renderButton(context, "Delete", startX + spacing * 2, buttonY, buttonWidth, buttonHeight, mouseX, mouseY, 0xFFAA0000);
         renderButton(context, "Back", startX + spacing * 3, buttonY, buttonWidth, buttonHeight, mouseX, mouseY, 0xFF333333);
     }
-    
-    private void renderButton(DrawContext context, String text, int x, int y, int width, int height, 
-                             int mouseX, int mouseY, int color) {
+
+    private void renderButton(DrawContext context, String text, int x, int y, int width, int height,
+                              int mouseX, int mouseY, int color) {
         boolean hovered = mouseX >= x && mouseX <= x + width && mouseY >= y && mouseY <= y + height;
-        
-        // Button background
+
         int bgColor = hovered ? (color | 0xFF000000) : (color & 0x80FFFFFF);
         context.fill(x, y, x + width, y + height, bgColor);
-        
-        // Button border
+
         if (hovered) {
             context.drawBorder(x, y, width, height, color);
         }
-        
-        // Button text
+
         context.drawCenteredTextWithShadow(textRenderer, text, x + width / 2, y + 8, textColor);
     }
 
     @Override
     public boolean mouseClicked(double mouseX, double mouseY, int button) {
-        // Account list click
         int panelX = 30;
         int panelY = 70;
         int panelWidth = width - 60;
         int listHeight = height - 140;
-        
+
         if (mouseX >= panelX && mouseX <= panelX + panelWidth && mouseY >= panelY && mouseY <= panelY + listHeight) {
             int itemHeight = 30;
             int clickedIndex = (int) ((mouseY - panelY) / itemHeight) + scrollOffset;
-            
+
             if (clickedIndex >= 0 && clickedIndex < accountList.size()) {
-                // 检测双击
                 long currentTime = System.currentTimeMillis();
                 if (clickedIndex == lastClickedAccount && currentTime - lastClickTime < DOUBLE_CLICK_TIME) {
-                    // 双击登录
                     loginWithAccount(clickedIndex);
                     return true;
                 }
-                
-                // 单击选择
+
                 selectedAccount = clickedIndex;
                 lastClickedAccount = clickedIndex;
                 lastClickTime = currentTime;
             }
             return true;
         }
-        
-        // Button clicks
+
         int buttonY = height - 60;
         int buttonWidth = 100;
         int buttonHeight = 25;
         int spacing = 110;
         int startX = (width - (spacing * 4 - 10)) / 2;
-        
+
         if (mouseY >= buttonY && mouseY <= buttonY + buttonHeight) {
             if (mouseX >= startX && mouseX <= startX + buttonWidth) {
                 loginUsingMicrosoft();
@@ -210,181 +183,164 @@ public class AltManagerGui extends Screen {
                 if (client != null) client.setScreen(new MainMenuScreen());
             }
         }
-        
+
         return super.mouseClicked(mouseX, mouseY, button);
     }
-    
-    // 根据账户类型登录
+
     private void loginWithAccount(int index) {
-        if (index < 0 || index >= accountList.size() || isLoading) return;
-        
+        if (index < 0 || index >= accountList.size()) return;
+
         String account = accountList.get(index);
-        if (account.contains("@")) {
-            // Microsoft账户，需要重新登录
-            status = "Microsoft accounts require re-login";
-            loginUsingMicrosoft();
-        } else {
-            // 离线账户，直接登录
-            loginWithOfflineAccount(account);
-        }
-    }
-    
-    // 离线账户登录
-    private void loginWithOfflineAccount(String username) {
-        if (isLoading) return;
         isLoading = true;
         status = "Logging in...";
+
+        if (account.contains("@")) {
+            loginMicrosoftAccount(account);
+        } else {
+            loginOfflineAccount(account);
+        }
+    }
+
+    private void loginMicrosoftAccount(String email) {
+        isLoading = true;
+        status = "Opening browser for Microsoft login...";
         
         try {
-            CrackedAccount offlineAccount = new CrackedAccount(username, false);
-            var loginResult = offlineAccount.login();
-            var session = loginResult.getFirst();
-            
-            Session mcSession = new Session(
-                session.getUsername(),
-                session.getUuid(),
-                session.getToken(),
-                Optional.empty(),
-                Optional.empty(),
-                Session.AccountType.LEGACY
-            );
-            
-            java.lang.reflect.Field sessionField = MinecraftClient.class.getDeclaredField("session");
-            sessionField.setAccessible(true);
-            sessionField.set(MinecraftClient.getInstance(), mcSession);
-            
-            status = "Success: Logged in as " + username;
-            isLoading = false;
-            
-            new Thread(() -> {
-                try {
-                    Thread.sleep(1000);
-                    MinecraftClient.getInstance().execute(() -> {
-                        if (client != null) client.setScreen(new MainMenuScreen());
-                    });
-                } catch (InterruptedException ignored) {}
-            }).start();
-            
-        } catch (Exception e) {
-            status = "Login failed: " + e.getMessage();
-            isLoading = false;
-        }
-    }
-    
-    @Override
-    public boolean mouseScrolled(double mouseX, double mouseY, double horizontalAmount, double verticalAmount) {
-        int panelX = 30;
-        int panelY = 70;
-        int panelWidth = width - 60;
-        int listHeight = height - 140;
-        
-        if (mouseX >= panelX && mouseX <= panelX + panelWidth && mouseY >= panelY && mouseY <= panelY + listHeight) {
-            scrollOffset = Math.max(0, Math.min(scrollOffset - (int) verticalAmount, 
-                Math.max(0, accountList.size() - (listHeight / 30))));
-            return true;
-        }
-        
-        return super.mouseScrolled(mouseX, mouseY, horizontalAmount, verticalAmount);
-    }
-
-    private void loginUsingMicrosoft() {
-        if (isLoading) return;
-        isLoading = true;
-        status = "Opening browser...";
-        
-        MicrosoftAccount.Companion.buildFromOpenBrowser(new MicrosoftAccount.OAuthHandler() {
-            @Override
-            public void openUrl(String url) {
-                try {
-                    Util.getOperatingSystem().open(url);
-                    status = "Complete login in browser...";
-                } catch (Exception e) {
-                    status = "Failed to open browser";
-                    isLoading = false;
-                }
-            }
-
-            @Override
-            public void authResult(MicrosoftAccount account) {
-                MinecraftClient.getInstance().execute(() -> {
+            MicrosoftAccount.Companion.buildFromOpenBrowser(new MicrosoftAccount.OAuthHandler() {
+                @Override
+                public void openUrl(String url) {
                     try {
-                        var loginResult = account.login();
-                        var session = loginResult.getFirst();
-                        
-                        Session mcSession = new Session(
-                            session.getUsername(),
-                            session.getUuid(),
-                            session.getToken(),
-                            Optional.empty(),
-                            Optional.empty(),
-                            Session.AccountType.MSA
-                        );
-                        
-                        java.lang.reflect.Field sessionField = MinecraftClient.class.getDeclaredField("session");
-                        sessionField.setAccessible(true);
-                        sessionField.set(MinecraftClient.getInstance(), mcSession);
-                        
-                        String accountName = session.getUsername() + "@microsoft.com";
-                        if (!accountList.contains(accountName)) {
-                            accountList.add(accountName);
-                            saveAccounts();
-                        }
-                        
-                        status = "Success: Logged in as " + session.getUsername();
-                        isLoading = false;
-                        
-                        new Thread(() -> {
-                            try {
-                                Thread.sleep(2000);
-                                MinecraftClient.getInstance().execute(() -> {
-                                    if (client != null) client.setScreen(null);
-                                });
-                            } catch (InterruptedException ignored) {}
-                        }).start();
-                        
+                        openBrowser(url);
+                        status = "Complete login in browser...";
                     } catch (Exception e) {
-                        status = "Failed to set session: " + e.getMessage();
+                        status = "Failed to open browser: " + e.getMessage();
                         isLoading = false;
                     }
-                });
-            }
+                }
 
-            @Override
-            public void authError(String error) {
-                MinecraftClient.getInstance().execute(() -> {
-                    status = "Login failed: " + error;
-                    isLoading = false;
-                });
-            }
-        }, MicrosoftAccount.AuthMethod.AZURE_APP);
-    }
-    
-    private void openOfflineDialog() {
-        if (client != null) {
-            client.setScreen(new OfflineLoginDialog(this));
+                @Override
+                public void authResult(MicrosoftAccount account) {
+                    MinecraftClient.getInstance().execute(() -> {
+                        try {
+                            var loginResult = account.login();
+                            var session = loginResult.getFirst();
+                            
+                            Session mcSession = new Session(
+                                session.getUsername(),
+                                session.getUuid(),
+                                session.getToken(),
+                                Optional.empty(),
+                                Optional.empty(),
+                                Session.AccountType.MSA
+                            );
+                            
+                            setMinecraftSession(mcSession);
+                            
+                            String accountName = session.getUsername() + "@microsoft.com";
+                            addAccount(accountName);
+                            
+                            status = "Success: Logged in as " + session.getUsername();
+                            isLoading = false;
+                            
+                        } catch (Exception e) {
+                            status = "Failed to set session: " + e.getMessage();
+                            isLoading = false;
+                        }
+                    });
+                }
+
+                @Override
+                public void authError(String error) {
+                    MinecraftClient.getInstance().execute(() -> {
+                        status = "Login failed: " + error;
+                        isLoading = false;
+                    });
+                }
+            }, MicrosoftAccount.AuthMethod.AZURE_APP);
+        } catch (Exception e) {
+            status = "Error: " + e.getMessage();
+            isLoading = false;
         }
     }
     
-    private void deleteAccount() {
-        if (selectedAccount >= 0 && selectedAccount < accountList.size()) {
-            String removed = accountList.remove(selectedAccount);
-            saveAccounts();
-            status = "Deleted: " + removed;
-            
-            if (accountList.isEmpty()) {
-                selectedAccount = -1;
-            } else {
-                selectedAccount = Math.max(0, selectedAccount - 1);
+    private void openBrowser(String url) throws Exception {
+        String os = System.getProperty("os.name").toLowerCase();
+        
+        if (os.contains("win")) {
+            // Windows - try multiple methods
+            try {
+                Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+            } catch (Exception e1) {
+                try {
+                    Runtime.getRuntime().exec("cmd /c start \"\" \"" + url + "\"");
+                } catch (Exception e2) {
+                    Runtime.getRuntime().exec(new String[]{"cmd", "/c", "start", url});
+                }
             }
+        } else if (os.contains("mac")) {
+            // macOS
+            Runtime.getRuntime().exec("open " + url);
         } else {
-            status = "Select account to delete";
+            // Linux/Unix
+            try {
+                Runtime.getRuntime().exec("xdg-open " + url);
+            } catch (Exception e1) {
+                try {
+                    Runtime.getRuntime().exec("firefox " + url);
+                } catch (Exception e2) {
+                    Runtime.getRuntime().exec("google-chrome " + url);
+                }
+            }
+        }
+    }
+
+    private void loginOfflineAccount(String username) {
+        try {
+            CrackedAccount account = new CrackedAccount(username, false);
+            var loginResult = account.login();
+            var session = loginResult.getFirst();
+
+            Session mcSession = new Session(
+                    session.getUsername(),
+                    session.getUuid(),
+                    session.getToken(),
+                    Optional.empty(),
+                    Optional.empty(),
+                    Session.AccountType.LEGACY
+            );
+
+            setMinecraftSession(mcSession);
+            status = "Success: Logged in as " + username;
+        } catch (Exception e) {
+            status = "Error: " + e.getMessage();
+        }
+        isLoading = false;
+    }
+
+    private void setMinecraftSession(Session session) {
+        try {
+            java.lang.reflect.Field sessionField = MinecraftClient.class.getDeclaredField("session");
+            sessionField.setAccessible(true);
+            sessionField.set(MinecraftClient.getInstance(), session);
+        } catch (Exception e) {
+            status = "Failed to set session: " + e.getMessage();
+        }
+    }
+
+    private void saveAccounts() {
+        try {
+            Files.createDirectories(altFile.getParent());
+            String json = gson.toJson(accountList);
+            Files.write(altFile, json.getBytes(StandardCharsets.UTF_8));
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
     private void loadAccounts() {
         try {
             if (Files.exists(altFile)) {
-                String json = Files.readString(altFile, StandardCharsets.UTF_8);
+                String json = new String(Files.readAllBytes(altFile), StandardCharsets.UTF_8);
                 accountList = gson.fromJson(json, new TypeToken<List<String>>(){}.getType());
                 if (accountList == null) accountList = new ArrayList<>();
             }
@@ -393,148 +349,96 @@ public class AltManagerGui extends Screen {
         }
     }
 
-    public void saveAccounts() {
-        try {
-            Files.createDirectories(altFile.getParent());
-            String json = gson.toJson(accountList);
-            Files.writeString(altFile, json, StandardCharsets.UTF_8);
-        } catch (Exception ignored) {}
+    private void addAccount(String account) {
+        if (!accountList.contains(account)) {
+            accountList.add(account);
+            saveAccounts();
+        }
     }
-    
-    // Offline login dialog
-    private static class OfflineLoginDialog extends Screen {
-        private final Screen parent;
-        private TextFieldWidget usernameField;
-        private String status = "";
 
-        public OfflineLoginDialog(Screen parent) {
+    private void deleteAccount() {
+        if (selectedAccount >= 0 && selectedAccount < accountList.size()) {
+            accountList.remove(selectedAccount);
+            saveAccounts();
+            selectedAccount = -1;
+        }
+    }
+
+    private void loginUsingMicrosoft() {
+        loginMicrosoftAccount("");
+    }
+
+    private void openOfflineDialog() {
+        client.setScreen(new OfflineLoginDialog(this));
+    }
+
+    public void loginOffline(String username) {
+        if (username.isEmpty()) return;
+
+        addAccount(username);
+        loginOfflineAccount(username);
+    }
+
+    private static class OfflineLoginDialog extends Screen {
+        private final AltManagerGui parent;
+        private TextFieldWidget usernameField;
+
+        public OfflineLoginDialog(AltManagerGui parent) {
             super(Text.literal("Offline Login"));
             this.parent = parent;
         }
 
         @Override
         protected void init() {
-            usernameField = new TextFieldWidget(
-                textRenderer,
-                width / 2 - 100,
-                height / 2 - 10,
-                200,
-                20,
-                Text.literal("Username")
-            );
-            usernameField.setMaxLength(48);
-            usernameField.setFocused(true);
+            usernameField = new TextFieldWidget(textRenderer, width / 2 - 100, height / 2 - 10, 200, 20, Text.literal("Username"));
+            usernameField.setPlaceholder(Text.literal("Enter username..."));
             addDrawableChild(usernameField);
         }
 
         @Override
         public void render(DrawContext context, int mouseX, int mouseY, float delta) {
-            this.renderBackground(context, mouseX, mouseY, delta);
-            
-            int dialogWidth = 300;
-            int dialogHeight = 150;
-            int dialogX = (width - dialogWidth) / 2;
-            int dialogY = (height - dialogHeight) / 2;
-            
-            context.fill(dialogX, dialogY, dialogX + dialogWidth, dialogY + dialogHeight, 0xE0000000);
-            context.drawBorder(dialogX, dialogY, dialogWidth, dialogHeight, Colors.currentColor().getRGB());
-            
-            context.drawCenteredTextWithShadow(textRenderer, "Offline Login", width / 2, dialogY + 20, 0xFFFFFF);
-            
-            renderButton(context, "Login", dialogX + 50, dialogY + 100, 80, 20, mouseX, mouseY, 0xFF007ACC);
-            renderButton(context, "Cancel", dialogX + 170, dialogY + 100, 80, 20, mouseX, mouseY, 0xFFAA0000);
-            
-            if (!status.isEmpty()) {
-                context.drawCenteredTextWithShadow(textRenderer, status, width / 2, dialogY + 70, 
-                    status.contains("Success") ? 0x00FF00 : 0xFF0000);
-            }
-            
+            context.drawCenteredTextWithShadow(textRenderer, "Offline Login", width / 2, height / 2 - 40, 0xFFFFFF);
+
+            int buttonY = height / 2 + 20;
+            boolean loginHovered = mouseX >= width / 2 - 50 && mouseX <= width / 2 + 50 && mouseY >= buttonY && mouseY <= buttonY + 20;
+            context.fill(width / 2 - 50, buttonY, width / 2 + 50, buttonY + 20, loginHovered ? 0xFF007ACC : 0xFF333333);
+            context.drawCenteredTextWithShadow(textRenderer, "Login", width / 2, buttonY + 6, 0xFFFFFF);
+
+            int cancelY = buttonY + 30;
+            boolean cancelHovered = mouseX >= width / 2 - 50 && mouseX <= width / 2 + 50 && mouseY >= cancelY && mouseY <= cancelY + 20;
+            context.fill(width / 2 - 50, cancelY, width / 2 + 50, cancelY + 20, cancelHovered ? 0xFFAA0000 : 0xFF333333);
+            context.drawCenteredTextWithShadow(textRenderer, "Cancel", width / 2, cancelY + 6, 0xFFFFFF);
+
             super.render(context, mouseX, mouseY, delta);
-        }
-        
-        private void renderButton(DrawContext context, String text, int x, int y, int width, int height, 
-                                 int mouseX, int mouseY, int color) {
-            boolean hovered = mouseX >= x && mouseX <= x + width && mouseY >= y && mouseY <= y + height;
-            
-            context.fill(x, y, x + width, y + height, hovered ? color : (color & 0x80FFFFFF));
-            context.drawCenteredTextWithShadow(textRenderer, text, x + width / 2, y + 6, 0xFFFFFF);
         }
 
         @Override
         public boolean mouseClicked(double mouseX, double mouseY, int button) {
-            if (usernameField != null && usernameField.mouseClicked(mouseX, mouseY, button)) {
-                setFocused(usernameField);
-                return true;
+            int buttonY = height / 2 + 20;
+            int cancelY = buttonY + 30;
+
+            if (mouseX >= width / 2 - 50 && mouseX <= width / 2 + 50) {
+                if (mouseY >= buttonY && mouseY <= buttonY + 20) {
+                    parent.loginOffline(usernameField.getText());
+                    client.setScreen(parent);
+                    return true;
+                } else if (mouseY >= cancelY && mouseY <= cancelY + 20) {
+                    client.setScreen(parent);
+                    return true;
+                }
             }
-            
-            int dialogWidth = 300;
-            int dialogHeight = 150;
-            int dialogX = (width - dialogWidth) / 2;
-            int dialogY = (height - dialogHeight) / 2;
-            
-            if (mouseX >= dialogX + 50 && mouseX <= dialogX + 130 && 
-                mouseY >= dialogY + 100 && mouseY <= dialogY + 120) {
-                handleLogin();
-                return true;
-            }
-            
-            if (mouseX >= dialogX + 170 && mouseX <= dialogX + 250 && 
-                mouseY >= dialogY + 100 && mouseY <= dialogY + 120) {
-                if (client != null) client.setScreen(parent);
-                return true;
-            }
-            
+
             return super.mouseClicked(mouseX, mouseY, button);
         }
-        
-        private void handleLogin() {
-            String username = usernameField.getText().trim();
-            if (username.isEmpty()) {
-                status = "Enter username";
-                return;
+
+        @Override
+        public boolean keyPressed(int keyCode, int scanCode, int modifiers) {
+            if (keyCode == 257) {
+                parent.loginOffline(usernameField.getText());
+                client.setScreen(parent);
+                return true;
             }
-            
-            try {
-                CrackedAccount offlineAccount = new CrackedAccount(username, false);
-                var loginResult = offlineAccount.login();
-                var session = loginResult.getFirst();
-                
-                Session mcSession = new Session(
-                    session.getUsername(),
-                    session.getUuid(),
-                    session.getToken(),
-                    Optional.empty(),
-                    Optional.empty(),
-                    Session.AccountType.LEGACY
-                );
-                
-                java.lang.reflect.Field sessionField = MinecraftClient.class.getDeclaredField("session");
-                sessionField.setAccessible(true);
-                sessionField.set(MinecraftClient.getInstance(), mcSession);
-                
-                // Add to account list
-                if (parent instanceof AltManagerGui) {
-                    AltManagerGui altManager = (AltManagerGui) parent;
-                    if (!altManager.accountList.contains(username)) {
-                        altManager.accountList.add(username);
-                        altManager.saveAccounts();
-                    }
-                }
-                
-                status = "Success: Logged in as " + username;
-                
-                new Thread(() -> {
-                    try {
-                        Thread.sleep(1000);
-                        MinecraftClient.getInstance().execute(() -> {
-                            if (client != null) client.setScreen(new MainMenuScreen());
-                        });
-                    } catch (InterruptedException ignored) {}
-                }).start();
-                
-            } catch (Exception e) {
-                status = "Login failed: " + e.getMessage();
-            }
+            return super.keyPressed(keyCode, scanCode, modifiers);
         }
     }
 }
